css/main.css
/* ... */
@keyframes topbar-back {
  0% {
    top: 6px;
    transform: rotate(135deg); }
  45% {
    transform: rotate(-10deg); }
  75% {
    transform: rotate(5deg); }
  100% {
    top: 0;
    transform: rotate(0); } }

@keyframes bottombar-back {
  0% {
    bottom: 6px;
    transform: rotate(-135deg); }
  45% {
    transform: rotate(10deg); }
  75% {
    transform: rotate(-5deg); }
  100% {
    bottom: 0;
    transform: rotate(0); } }

@keyframes topbar-x {
  0% {
    top: 0px;
    transform: rotate(0deg); }
  45% {
    top: 6px;
    transform: rotate(145deg); }
  75% {
    transform: rotate(130deg); }
  100% {
    transform: rotate(135deg); } }

@keyframes bottombar-x {
  0% {
    bottom: 0px;
    transform: rotate(0deg); }
  45% {
    transform: rotate(-145deg); }
  75% {
    transform: rotate(-130deg); }
  100% {
    transform: rotate(-135deg); } }

* {
  padding: 0;
  margin: 0; }

body {
  background: #f4f4f4;
  font-family: "Dosis", "montserrat", "Bebas Neue", sans-serif;
  line-height: 1.6;
  -webkit-font-smoothing: antialiased; }

a {
  text-decoration: none;
  color: #333;
  cursor: pointer; }

ul {
  list-style: none; }

a {
  text-transform: uppercase;
  background-color: transparent; }

h2, .h2, h3, .h3, h4, .h4 {
  text-transform: uppercase; }

img {
  vertical-align: middle;
  width: 100%;
  max-width: 100%; }

section {
  padding: 70px 0;
  position: relative;
  background: #f4f4f4;
  padding-bottom: 0; }

* input {
  outline: none; }

.main-page {
  position: absolute;
  width: 100%;
  top: 0;
  left: 0; }
  .main-page .profile-header {
    position: relative;
    color: #f4f4f4;
    background: linear-gradient(0deg, rgba(44, 44, 44, 0.4), #437dac);
    height: 60vh;
    max-height: 650px; }
    @media (max-height: 768px) {
      .main-page .profile-header {
        height: 410px; } }
    .main-page .profile-header::before, .main-page .profile-header::after {
      position: absolute;
      z-index: 0;
      width: 100%;
      height: 100%;
      display: block;
      left: 0;
      top: 0;
      content: ""; }
    .main-page .profile-header .profile-header-img {
      position: absolute;
      background: url("https://source.unsplash.com/1600x900/?shoreline") center center/cover;
      z-index: -1;
      height: 100%;
      width: 100%;
      transform: translate3d(0px, 0px, 0px); }
    .main-page .profile-header .container {
      position: relative;
      text-align: center;
      height: 100%;
      z-index: 2; }
      .main-page .profile-header .container:last-child {
        height: 0; }
      .main-page .profile-header .container > .content-center {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        text-align: center;
        padding: 0 15px;
        color: #fff;
        width: 100%;
        max-width: 1280px; }
        @media (max-height: 767px) {
          .main-page .profile-header .container > .content-center {
            top: 180px; } }
        .main-page .profile-header .container > .content-center .profile-img a {
          position: relative; }
          .main-page .profile-header .container > .content-center .profile-img a::before {
            content: "";
            border: 15px solid #437dac;
            border-radius: 50%;
            height: 180px;
            width: 180px;
            position: absolute;
            left: 0;
            animation: pulsate 1.6s ease-out;
            animation-iteration-count: infinite;
            opacity: 0;
            z-index: 99; }
        .main-page .profile-header .container > .content-center .profile-img img {
          position: relative;
          border-radius: 50%;
          height: 180px;
          width: 180px;
          padding: 0;
          margin: 0;
          border: 15px solid transparent;
          z-index: 9999;
          transition: all 0.3s ease-out; }
          .main-page .profile-header .container > .content-center .profile-img img:hover {
            transform: scale(1.2); }
        .main-page .profile-header .container > .content-center h2.title, .main-page .profile-header .container > .content-center .title.h2 {
          text-align: center;
          margin-top: 30px;
          margin-bottom: 30px;
          font-size: 2.5rem;
          font-weight: 700; }
        .main-page .profile-header .container > .content-center .category {
          text-align: center; }
    .main-page .profile-header .social-links-container {
      text-align: center;
      margin-top: -40px; }

#About .col-6:not(:first-child) {
  padding-left: 2rem; }

#About .col-6:not(:last-child) {
  padding-right: 2rem; }

#About .col-6:first-child {
  padding-right: 2rem; }

#About .row:not(:first-child) {
  margin-top: 1rem; }

#Skills .progress-container {
  position: relative; }
  #Skills .progress-container .progress-badge {
    font-size: 1rem;
    text-transform: uppercase;
    color: steelblue;
    font-weight: 700; }
  #Skills .progress-container .progress-bar {
    background: steelblue; }
  #Skills .progress-container .progress {
    border-radius: 0;
    box-shadow: none;
    margin-top: 14px;
    height: 5px;
    font-size: 1.1rem;
    background: #437dac; }
    #Skills .progress-container .progress .progress-value {
      color: steelblue;
      position: absolute;
      top: 2px;
      right: 0;
      font-size: .8rem; }

#Contact .title {
  margin-top: 30px; }

#Contact .input-group, #Contact .form-group {
  margin-bottom: 10px; }
  #Contact .input-group .form-control, #Contact .form-group .form-control {
    padding: 10px 18px; }
  #Contact .input-group.input-group-focus, #Contact .form-group.input-group-focus {
    border-radius: 30px;
    border: 1px solid steelblue; }
  #Contact .input-group .input-group-addon, #Contact .form-group .input-group-addon {
    padding: 10px 0 10px 18px; }
/* ... */

